<resources>
    <string name="app_name">E-Commerce</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_password">Password</string>
    <string name="input_email">Email</string>
    <string name="input_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_forgotpassword">Forgot Password</string>
    <string name="btn_register">Register Now</string>
    <string name="input_username">Username</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_lastname">LastName</string>
    <string name="btnRegister">Register</string>
    <string name="navigation_drawer_open">open bar</string>
    <string name="navigation_drawer_close">closed bar</string>
    <string name="category">Category</string>
    <string name="menuHomeTitle">Home</string>
    <string name="category_s_name">Category\'s Name</string>
    <string name="addCategoryButton">Create</string>
    <string name="lbl_new_category">Create New Category</string>
    <string name="register_a_new_category">Register a new category</string>
    <string name="lbl_create_a_new_product">Create a New Product</string>
    <string name="product">Products</string>
    <string name="lbl_edit_category">Edit Category</string>
    <string name="btnEdit">Edit</string>
    <string name="lblEditProduct">Edit Product</string>
    <string name="bnt_get_password">GET PASSWORD</string>
    <string name="lblEnterEmail">Email</string>
    <string name="lbl_create_an_account">CREATE AN ACCOUNT</string>
    <string name="account">Profile</string>
    <string name="lbl_my_profile">My Profile</string>
    <string name="user_register_firstname">FirstName</string>
    <string name="user_register_lastname">LastName</string>
    <string name="user_register_phone_number">Phone Number</string>
    <string name="user_register_birthday">Birthday</string>
    <string name="products_description">Product\'s Description</string>
    <string name="lbl_products_price">Product\'s Price</string>
    <string name="lbl_select_category">Select Category:</string>
    <string name="please_wait">Please wait</string>
    <string name="connecting">Connecting...</string>
    <string name="authenticating">Authenticating...</string>
    <string name="download">Downloading images...</string>
    <string name="sub_total_items">Sub total(0 items):</string>
    <string name="lbl_total_price">0.0</string>
    <string name="proceed_to_checkout">Proceed to checkout</string>
    <string name="btn_previous">Previous</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_next">Next</string>
    <string name="check_seller">Seller</string>
    <string name="menuLogout">Logout</string>
    <string name="btn_select_image">Select image(s)</string>
    <string name="clear">Clear Notifications</string>
    <string name="welcome_to_the_shop">Welcome to the shop!</string>
</resources>